2003-10-27  Stephane Carrez  <stcarrez@nerim.fr>

	* gas/m68hc11/opers12-dwarf2.d: Update, local label prefix removed.
	* gas/m68hc11/lbranch-dwarf2.d: Update.

2003-10-23  Peter Barada  <pbarada@mail.wm.sps.mot.com>

	* gas/m68k/mcf-mov3q.s: New file: Test some ColdFire instructions.
	* gas/m68k/mcf-mov3q.s: New file: Expected disassembly.
	* gas/m68k/all.exp: Run new test.

2003-10-22  Andreas Schwab  <schwab@suse.de>
	    H.J. Lu  <hongjiu.lu@intel.com>

	* gas/ia64/dv-mutex-err.s: Add more tests for compare.
	* gas/ia64/dv-mutex.s: Likewise.

	* gas/ia64/dv-mutex-err.l: Updated.
	* gas/ia64/dv-mutex.d: Likewise.

2003-10-18  Hans-Peter Nilsson  <hp@bitrange.com>

	* gas/mmix/op-0-1.d, gas/mmix/pushj-c.d, gas/mmix/weak1.d: Add
	--no-pushj-stubs option.
	* gas/mmix/reloclab-r.d, gas/mmix/reloclab.d: Add --no-stubs
	option.
	* gas/mmix/reloclab.l: Adjust for PUSHJ stub.
	* gas/mmix/pushj-cs.d, gas/mmix/reloclab-s.d, gas/mmix/relax2.s,
	gas/mmix/relax2.d, gas/mmix/op-0-1s.d, gas/mmix/reloclab-rs.d,
	gas/mmix/weak1-s.d: New tests.

2003-10-17  Ian Lance Taylor  <ian@wasabisystems.com>

	* gas/arm/iwmmxt-bad.s: New file.
	* gas/arm/iwmmxt-bad.l: New file.
	* gas/arm/arm.exp: Run new test.

2003-10-16  Ian Lance Taylor  <ian@wasabisystems.com>

	* gas/arm/iwmmxt.d: Add -miwmmxt to #objdump line, to get the
	right disassembly.

2003-10-16  H.J. Lu  <hongjiu.lu@intel.com>

	* gas/alpha/elf-reloc-8.d: Updated.

2003-10-10  Dave Brolley  <brolley@redhat.com>

	* gas/frv/allinsn.s: Use preoperly aligned registers.
	* gas/frv/allinsn.d: Update expected results.

2003-10-08  Chris Demetriou  <cgd@broadcom.com>

	* lib/gas-defs.exp (gas_run): Always log the command being run.
	(gas_start): Likewise.
	(regexp_diff): Make error reporting about non-existent files
	consistent.

2003-10-06  Nick Clifton  <nickc@redhat.com>

	* gas/macros/app1.d: Skip sections symbols (if present).
	* gas/macros/app2.d: Likewise.
	* gas/macros/app3.d: Likewise.
	* gas/macros/app4.d: Likewise.
