@@ -13,12 +13,12 @@ Disassembly of section .text:
 0+00c <[^>]*> edd1e108 	ldfp	f6, \[r1, #32\]
 0+010 <[^>]*> 4db200ff 	ldcmi	0, cr0, \[r2, #1020\]!
 0+014 <[^>]*> 5cf31710 	ldcpll	7, cr1, \[r3\], #64
-0+018 <[^>]*> ed1f8001 	ldc	0, cr8, \[pc, -#4\]
+0+018 <[^>]*> ed1f8001 	ldc	0, cr8, \[pc, #-4\]
 0+01c <[^>]*> ed830500 	cfstr32	mvfx0, \[r3\]
 0+020 <[^>]*> edc0f302 	stcl	3, cr15, \[r0, #8\]
 0+024 <[^>]*> 0da2c419 	cfstrseq	mvf12, \[r2, #100\]!
 0+028 <[^>]*> 3ca4860c 	stccc	6, cr8, \[r4\], #48
-0+02c <[^>]*> ed0f7101 	stfs	f7, \[pc, -#4\]
+0+02c <[^>]*> ed0f7101 	stfs	f7, \[pc, #-4\]
 0+030 <[^>]*> ee715212 	mrc	2, 3, r5, cr1, cr2, \{0\}
 0+034 <[^>]*> aeb1f4f2 	mrcge	4, 5, pc, cr1, cr2, \{7\}
 0+038 <[^>]*> ee21f711 	mcr	7, 1, pc, cr1, cr1, \{0\}
