@@ -1,3 +1,14 @@
+2003-11-03  Daniel Jacobowitz  <drow@mvista.com>
+
+	* gas/arm/arm7t.d: Replace '-#' with '#-'.
+	* gas/arm/copro.d: Likewise.
+	* gas/arm/fpa-mem.d: Likewise.
+	* gas/arm/maverick.c: Likewise.
+	* gas/arm/maverick.d: Likewise.
+	* gas/arm/vfp1.d: Likewise.
+	* gas/arm/vfp1xD.d: Likewise.
+	* gas/arm/xscale.d: Likewise.
+
 2003-10-27  Stephane Carrez  <stcarrez@nerim.fr>
 
 	* gas/m68hc11/opers12-dwarf2.d: Update, local label prefix removed.
